[package]
name = "phips-1brc"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
codegen-units = 1
lto = true

[dependencies]
fnv = "1.0.7"
likely_stable = "0.1.2"
memchr = "2.7.2"
memmap = "0.7.0"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
