[package]
name = "phips-1brc"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
codegen-units = 1
lto = true

[dependencies]
gxhash = "3.4.1"
likely_stable = "0.1.2"
memchr = "2.7.2"
memmap2 = "0.9.4"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
